--- a/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="OpenGLPrac.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Canvas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
