Divide Canvas class into .h and .cpp files

--- a/ConsoleApplication3/ConsoleApplication3.vcxproj
+++ b/ConsoleApplication3/ConsoleApplication3.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="OpenGLPrac.cpp" />
+    <ClCompile Include="Canvas.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Canvas.h" />
