--- a/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="OpenGLPrac.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Canvas.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLPrac.h">
